Fix för z-index på chrome?
Check it out!

--- a/css/basic.css
+++ b/css/basic.css
@@ -47,7 +47,7 @@ body{
 	margin:0px;
 	background:white;
 	text-decoration:none;
-	z-index:0;
+	z-index:1;
 	
 	-webkit-box-shadow: 10px 5px 10px 10px rgba(0, 0, 0, .3);
 	   -moz-box-shadow: 10px 5px 10px 10px rgba(0, 0, 0, .3);
@@ -88,9 +88,10 @@ body{
 #images a:hover {
 	cursor:pointer;
 	z-index:100;
+   	
 
 	-webkit-transform: scale(2);
-       -moz-transform: scale(2)
+		-moz-transform: scale(2); 
 	     -o-transform: scale(2);
 	        transform: scale(2);
 	
@@ -98,13 +99,36 @@ body{
 	   -moz-box-shadow: 10px 5px 30px 20px rgba(0, 0, 0, .1);
 	        box-shadow: 10px 5px 30px 20px rgba(0, 0, 0, .1);
 
-
+	-webkit-animation-duration: 0.6s;
+	-webkit-animation-name: zfix;		
 }
+
 
 #images a:after{
 	content: attr(title);
 	
 }
+
+
+
+@keyframes zfix  {
+	from {z-index: 1;}
+	to {z-index: 1000;-moz-transform: scale(2);}
+}
+
+@-moz-keyframes zfix  {
+	from {z-index: 1;}
+	to {z-index: 1000;}
+}
+
+/* z-index fix in chrome */
+@-webkit-keyframes zfix  {
+	from {z-index: 1;}
+	to {z-index: 1000;}
+}
+
+
+
 
 
 
